# aiohttp-3.12.9-sp1

./: CHANGES.rst  CVE-2025-69223-CHERRY-PICK.md  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml
aiohttp/: compression_utils.py  http_parser.py  multipart.py  web_request.py
aiohttp/_vendored/: __init__.py  brotli.py
tests/: conftest.py  test_client_functional.py  test_cve_2025_69223_vendored_brotli.py  test_http_parser.py  test_multipart.py  test_run_app.py
